Fixed text alignment errors.

--- a/frontend/src/Components/UserProfile.scss
+++ b/frontend/src/Components/UserProfile.scss
@@ -111,7 +111,7 @@
 
 .user-contact {
   width: 100%;
-  height: 250px;
+  height: 300px;
   background-color: var(--t-blue-purple);
   padding: 0 1.5rem;
   display: flex;
@@ -122,7 +122,6 @@
   &-information {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     gap: 1rem;
   }
@@ -140,6 +139,8 @@
   }
 
   @media (min-width: 700px) {
+    height: 270px;
+
     .white-text {
       font-size: 13px;
     }
